status/re/resources/0.1.0/macos/darwin-23.6.0/gnat=10.3.2/resources-0.1.0.yaml.log
Test ran at 2024-08-14 01:47:26.283691+00:00

SOLUTION:
resources=0.1.0: Utility library to handle project resources at run-time
Origin: commit a418da627ec3d18f50f60edaee41a2f47f173a0e from https://github.com/alire-project/resources.git
Properties:
   Author: Alire Team
   Description: Utility library to handle project resources at run-time
   License: MIT
   Maintainer: Fabien Chouteau <fabien.chouteau@gmail.com>
   Maintainers_Logins: Fabien-Chouteau
   Maintainers_Logins: mosteo
   Name: resources
   Tag: utils
   Version: 0.1.0
   Website: https://github.com/alire-project/resources


LOG:
Note: Deploying resources=0.1.0...
Note: Building resources/resources.gpr...
Setup
   [mkdir]        object directory for project Resources
   [mkdir]        library directory for project Resources
Compile
   [C]            whereami.c
   [Ada]          resources.adb
In file included from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/stdlib.h:62,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/a202faa0-f27e-4290-ad64-4d13d443cb38/resources_0.1.0_a418da62/whereami/src/whereami.c:25:
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:30: error: missing ')' after "__has_attribute"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                              ^~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:32: error: missing binary operator before token "unsafe_buffer_usage"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                                ^~~~~~~~~~~~~~~~~~~

   compilation of whereami.c failed

gprbuild: *** compilation phase failed
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/a202faa0-f27e-4290-ad64-4d13d443cb38/resources_0.1.0_a418da62/resources.gpr"] exited with code 4
ERROR: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/a202faa0-f27e-4290-ad64-4d13d443cb38/resources_0.1.0_a418da62/resources.gpr"] exited with code 4
stderr: ALIRE.CHECKED_ERROR
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/a202faa0-f27e-4290-ad64-4d13d443cb38/resources_0.1.0_a418da62/resources.gpr"] exited with code 4
stderr: raised ALIRE.CHECKED_ERROR : alire-stored-error:1
Load address: 0x1007e3000
Call stack traceback locations:
0x1010eb415 0x100dbee83 0x100fd1df9 0x100fd2581 0x100f32ac3 0x100f30f99 0x100f4d873 0x100f99dc1 0x100f9881a 0x100f4d9b8 0x100f31349 0x1008429c1 0x100853578 0x10085801c 0x1008de05c 0x1008e93b8 0x1007e4605 0x1007e7914


Warning: resources=0.1.0 successfully retrieved but its build failed.
There are no dependencies.
ERROR: Build ended with errors
